	in a running bot; also added __revision__ strings so CVS would be 
	happy to keep such information for us :)
	
	* Fixed bug #848475 -- bad error message from regexp-expecting
	commands.
	
	* Stopped listing the plugin dispatcher command in the list of
	commands for that plugin.
	
	* Fixed bug in Gameknot.gkstats when retrieving the stats for
	users who haven't yet played a game.
	
2003-11-18  Jeremy Fincher  <jemfinch@users.sf.net>

	* Changed commands so that plugins no longer have to make sure
	that their commands are unique within the bot.  Ambiguous commands
	will reply with an error message and instruct the user to
	disambiguate the command by prefixing with the appropriate plugin
	name.. Many commands that formerly contained the plugin name (or a
	portion thereof) have had it removed, and many plugins have had
	their names changed so prefixing a command with the plugin name is
	less bulky.  Rather than list each individual example, you can
	read the plugin documentation posted at ***TODO***

	* Renamed numerous plugins: OwnerCommands became Owner,
	AdminCommands became Admin, ChannelCommands became Channel,
	MiscCommands became Misc, UserCommands became User, URLSnarfer
	became URL, Notes became Note, FunCommands became Fun, IMDB became
	Movies, and Aliases became Alias.

	* Made aliases persistent across reloads/bot restarts.  You should
	probably change your botscripts not to add the aliases onStart, but
	(assuming those aliases don't change) it should still work fine.

	* Added the ability for users to specify that their passwords
	should be hashed on disk.
	
	* Added MoobotFactoids plugin for moobot-style factoids (which are
	meant to mimic blootbot-style factoids).  People used to
	traditional IRC bot factoids plugins will probably find this
	plugin more to their taste than Factoids.

	* Added Ebay plugin for snarfing eBay URLs as well as getting info on
	certain auctions.

	* Added monitoring of occurrences of certain words on a per-user